add h1, flex body

--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
 		<title>Flexbox vs CSS Grid</title>
 	</head>
 	<body>
+		<h1>Jhon, otro mes que no COBRAS  :smiley: 🤣</h1>
 		<div class="container">
 			<div class="conciertos">
 				<div class="conciertos__card conciertos__card--uno">
